# raad

./: .gitignore  .gitmodules  QUICKSTART.md  README.html  README.md  README.md~  hi.txt  test.txt
Conda_Environment_Installation/: .RAAD_env.yml.un~  RAAD_env.yml  README.md
Data/Download/: .FileDownload.py.swp  .FileDownload.py.un~  .main.py.swp  .main.py.un~  FileDownload.py  FileDownload.py~  main.py  main.py~
Data_Analysis/: Map Display.ipynb  Time_From_Commands.ipynb  command_list_modified.csv  raadpy.py
GEANT_Background_Model/: .vis.mac.swp  B4.root  CMakeCache.txt  CMakeLists.txt  G4History.macro  GNUmakefile  RUN1launch.txt  VISlaunch.txt  dump.xml  exampleB4a.cc  getB4TXTfilefromROOT.txt  launchG4RAAD.txt  run1.mac  vis.mac
Geant_BG_Model/: CMakeCache.txt  CMakeLists.txt  LIGHT-1_BG.cc  Makefile  README.md  cmake_install.cmake  dump.cxx  dump.xml  run1.mac
Geant_BG_Model/include/: ActionInitialization.hh  AnalysisManager.hh  B4aEventAction.hh  DetectorConstruction.hh  DetectorHit.hh  EventAction.hh  MyPhysicsList.hh  ParticleMessenger.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
Geant_BG_Model/macros/: electron.mac  flat_gamma.mac  merge.sh  orbit_proton.mac  proton.mac  vis.mac
Geant_BG_Model/src/: .B4PrimaryGeneratorAction.cc.swo  ActionInitialization.cc  B4PrimaryGeneratorAction.cc  B4PrimaryGeneratorAction.cc_BKG_TGF_GRB  B4RunAction.cc  B4RunAction.cc~  B4aDetectorConstruction.cc  B4aEventAction.cc~  DetectorConstruction.cc  DetectorHit.cc  EventAction.cc  MyPhysicsList.cc  ParticleMessenger.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
RAADpy/: raadpy.py
(+229 files in other folders)
